# vitriol-py

./: .flake8  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml
tests/: test_vitriol.py
