[tool.poetry]
name = "vitriol"
version = "0.1.0"
description = "Bytecode-interpreted LISP-like language written in pure Python."
authors = ["PureFunctor <purefunctor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-import-order = "^0.18.1"
mypy = "^0.812"
pre-commit = "^2.13.0"
pytest = "^5.2"

[tool.coverage.run]
source = ["vitriol"]
omit = ["*tests*", "vitriol/__main__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
